kubernetes/clusters/macmini/media/deluge/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  namespace: media
spec:
  serviceName: deluge
  selector:
    matchLabels:
      app: deluge # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: deluge # has to match .spec.selector.matchLabels
    spec:
      serviceAccountName: deluge
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
          - name: vault-openvpn-secret
            mountPath: '/mnt/secrets-store'
            readOnly: true
      - name: deluge
        image: linuxserver/deluge:latest
        readinessProbe:
          tcpSocket:
            port: 8112
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: config
            mountPath: /config
          - name: downloads
            mountPath: /downloads
        ports:
          - name: deluge-ui
            containerPort: 8112
      volumes:
        - name: downloads
          nfs:
            server: blizzardnas.blizzard.internal
            path: /volume1/array/downloads
        - name: vault-openvpn-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: 'vault-deluge'
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
