kubernetes/clusters/macmini/media/deluge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  selector:
    app: deluge
  ports:
    - name: deluge-ui
      protocol: TCP
      port: 8112
      targetPort: 8112
  type: ClusterIP
  clusterIP: None
