kubernetes/clusters/macmini/media/deluge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
spec:
  ingressClassName: nginx
  rules:
  - host: deluge.service.blizzard.consul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge
            port:
              number: 8112
